Switch to overflow-y auto to prevent a disabled scrollbar from showing when not needed.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,7 +43,7 @@ body {
  border-radius: 12px;
  background-color: #d4d4d4;
  height: 720px;
- overflow-y: scroll;
+ overflow-y: auto;
 }
 
 .brand {
